Sass assortment and improved bootstrap imports

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-@import "./custom";
+@import "./custom.scss";
 
-$primary-font-size: 18px;
+$primary-font-size: 16px;
 
 html {
   font-size: $primary-font-size;
