--- a/src/components/animatedBike/AnimatedBike.scss
+++ b/src/components/animatedBike/AnimatedBike.scss
@@ -2,8 +2,11 @@
 
 .animBike {
   max-width: 100%;
-  background: url("../../assets/home/city.svg") center bottom no-repeat;
+  background: url("../../assets/home/city.svg") bottom center repeat-x;
   background-origin: border-box;
+  background-size: 160%;
+  animation: bg_slide 64s linear infinite;
+
   @include breakpoint(phone) {
     background-size: cover;
   }
@@ -62,5 +65,15 @@
   }
   to {
     transform: rotateZ(10deg);
+  }
+}
+
+@keyframes bg_slide {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: -1440px 0;
   }
 }
