--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,65 +1,144 @@
 @import "../../styles/colors";
 
-.customBtn {
-  border-top: 2px solid $primary;
-  border-left: 2px solid white;
-  border-bottom: 2px solid white;
-  border-right: 2px solid white;
-  background-color: white;
-  padding: 10px;
+// Set Animation Button Speed
+$animStartSpeed: 0.5s;
+$animEndSpeed: 0.5s;
+
+.button {
   width: 100%;
+  text-align: center;
+  p {
+    padding: 0;
+    margin: 12px;
+  }
+  .top {
+    visibility: visible;
+    height: 5px;
+    background-color: $primary;
+    transform-origin: 100% 15%;
+  }
+  .right {
+    background-color: $primary;
+    visibility: hidden;
+    width: 6px;
+    height: 5px;
+    transform-origin: 100% 100%;
+    float: right;
+  }
+  .left {
+    background-color: $primary;
+    visibility: hidden;
+    width: 6px;
+    height: 5px;
+    transform-origin: 100% 7%;
+  }
+  .bottom {
+    background-color: $primary;
+    visibility: hidden;
+    height: 5px;
+    transform-origin: 100% 15%;
+  }
 }
 
-.startAnimation {
-  animation: hoverBtnStart 1s linear;
+.startAnimLeft {
+  animation: leftButtonStart $animStartSpeed linear;
   animation-fill-mode: forwards;
-  animation-delay: 0.2s;
 }
 
-.endAnimation {
-  animation: hoverBtnEnd 0.8s linear;
+.startAnimBottom {
+  animation: bottomButtonStart $animStartSpeed * 2 linear;
+  animation-delay: $animStartSpeed;
+  animation-fill-mode: forwards;
 }
 
-@keyframes hoverBtnStart {
+.startAnimRight {
+  animation: rightButtonStart $animStartSpeed * 2 linear;
+  animation-delay: $animStartSpeed * 3;
+  animation-fill-mode: forwards;
+}
+
+.startAnimText {
+  animation: textButtonStart $animStartSpeed * 2 linear;
+  animation-delay: $animStartSpeed * 4;
+  animation-fill-mode: forwards;
+}
+
+@keyframes bottomButtonStart {
   0% {
-    border-top: 2px solid $primary;
+    visibility: visible;
+    transform: scaleX(0);
+    transform-origin: left;
   }
   40% {
-    border-top: 2px solid $primary;
-    border-right: 2px solid $primary;
+    visibility: visible;
+    transform: scaleX(0.4);
+    transform-origin: left;
   }
   80% {
-    border-top: 2px solid $primary;
-    border-right: 2px solid $primary;
-    border-bottom: 2px solid $primary;
+    visibility: visible;
+    transform: scaleX(0.8);
+    transform-origin: left;
   }
   100% {
-    border-top: 2px solid $primary;
-    border-right: 2px solid $primary;
-    border-bottom: 2px solid $primary;
-    border-left: 2px solid $primary;
-    color: $primary;
+    visibility: visible;
+    transform: scaleX(1);
+    transform-origin: left;
   }
 }
 
-@keyframes hoverBtnEnd {
+@keyframes leftButtonStart {
   0% {
-    border-top: 2px solid $primary;
-    border-right: 2px solid $primary;
-    border-bottom: 2px solid $primary;
-    border-left: 2px solid $primary;
-    color: $primary;
+    visibility: visible;
+    transform: scaleY(0);
   }
   40% {
-    border-top: 2px solid $primary;
-    border-right: 2px solid $primary;
-    border-bottom: 2px solid $primary;
+    visibility: visible;
+    transform: scaleY(4);
   }
   80% {
-    border-top: 2px solid $primary;
-    border-right: 2px solid $primary;
+    visibility: visible;
+    transform: scaleY(8);
   }
   100% {
-    border-top: 2px solid $primary;
+    visibility: visible;
+    transform: scaleY(12);
+  }
+}
+
+@keyframes rightButtonStart {
+  0% {
+    visibility: visible;
+    transform: scaleY(0);
+  }
+  40% {
+    visibility: visible;
+    transform: scaleY(4);
+  }
+  80% {
+    visibility: visible;
+    transform: scaleY(12);
+  }
+  100% {
+    visibility: visible;
+    transform: scaleY(9);
+  }
+}
+
+@keyframes textButtonStart {
+  0% {
+    color: black;
+    font-weight: normal;
+  }
+  40% {
+    color: black;
+    font-weight: bold;
+  }
+  80% {
+    color: $primary;
+    font-weight: bold;
+  }
+  100% {
+    color: $primary;
+    font-weight: bolder;
   }
 }
