--- a/src/pages/moviePage/MoviePage.scss
+++ b/src/pages/moviePage/MoviePage.scss
@@ -7,4 +7,13 @@
     left: 0;
     font-size: 1.3rem;
   }
+  svg {
+    width: 100%;
+  }
+}
+
+.placeholderText {
+  background-color: #ddd;
+  height: 15px;
+  border-radius: 10px;
 }
