--- a/src/pages/moviePage/MoviePage.scss
+++ b/src/pages/moviePage/MoviePage.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 .imageBadge {
   position: relative;
   img {
@@ -9,11 +11,14 @@
   }
   svg {
     width: 100%;
+    rect {
+      fill: $primary;
+    }
   }
 }
 
 .placeholderText {
-  background-color: #ddd;
+  background-color: $primary;
   height: 15px;
   border-radius: 10px;
 }
